ferritin/src/snapshots/ferritin__tests__get_prefix_tests_deep_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::prefix_tests::deep\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/deep/index.html",
  "meta": {
    "name": "deep",
    "kind": "module",
    "visibility": "public",
    "definedAt": "fixture_crate::prefix_tests::deep",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "A nested module to exercise ",
              "style": "Plain"
            },
            {
              "text": "self::",
              "style": "InlineCode"
            },
            {
              "text": ", ",
              "style": "Plain"
            },
            {
              "text": "super::",
              "style": "InlineCode"
            },
            {
              "text": ", and ",
              "style": "Plain"
            },
            {
              "text": "super::super::",
              "style": "InlineCode"
            },
            {
              "text": ".",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "module",
    "items": [
      {
        "path": "glob_reexport",
        "kind": "module",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/deep/glob_reexport/index.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Exercises the \"glob brings a name into scope, then re-export that",
                    "style": "Plain"
                  },
                  {
                    "text": " ",
                    "style": "Plain"
                  },
                  {
                    "text": "name\" pattern, all within the same crate.",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "DeepMarker",
        "kind": "struct",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/deep/struct.DeepMarker.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A marker target inside ",
                    "style": "Plain"
                  },
                  {
                    "text": "deep",
                    "style": "InlineCode"
                  },
                  {
                    "text": ".",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "DocDeep",
        "kind": "struct",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/deep/struct.DocDeep.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Intra-doc links from a nested module:",
                    "style": "Plain"
                  }
                ]
              },
              {
                "type": "list",
                "items": [
                  {
                    "content": [
                      {
                        "type": "paragraph",
                        "spans": [
                          {
                            "text": "self::DeepMarker",
                            "style": "InlineCode",
                            "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/deep/struct.DeepMarker.html"
                          },
                          {
                            "text": " — local sibling.",
                            "style": "Plain"
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "content": [
                      {
                        "type": "paragraph",
                        "spans": [
                          {
                            "text": "super::PrefixMarker",
                            "style": "InlineCode",
                            "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/struct.PrefixMarker.html"
                          },
                          {
                            "text": " — one module up.",
                            "style": "Plain"
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "content": [
                      {
                        "type": "paragraph",
                        "spans": [
                          {
                            "text": "super::super::TestStruct",
                            "style": "InlineCode",
                            "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html"
                          },
                          {
                            "text": " — two modules up (crate root).",
                            "style": "Plain"
                          }
                        ]
                      }
                    ]
                  },
                  {
                    "content": [
                      {
                        "type": "paragraph",
                        "spans": [
                          {
                            "text": "crate::TestStruct",
                            "style": "InlineCode",
                            "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.TestStruct.html"
                          },
                          {
                            "text": " — absolute path from crate root.",
                            "style": "Plain"
                          }
                        ]
                      }
                    ]
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "SelfAliasDeep",
        "kind": "struct",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/deep/struct.SelfAliasDeep.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A marker target inside ",
                    "style": "Plain"
                  },
                  {
                    "text": "deep",
                    "style": "InlineCode"
                  },
                  {
                    "text": ".",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "SuperAlias",
        "kind": "struct",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/prefix_tests/struct.SuperAlias.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A sibling target for ",
                    "style": "Plain"
                  },
                  {
                    "text": "self::",
                    "style": "InlineCode"
                  },
                  {
                    "text": " / ",
                    "style": "Plain"
                  },
                  {
                    "text": "super::PrefixMarker",
                    "style": "InlineCode"
                  },
                  {
                    "text": " references.",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "SuperSuperAlias",
        "kind": "struct",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/struct.SuperSuperAlias.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A simple struct for testing basic functionality.",
                    "style": "Plain"
                  }
                ]
              },
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "This struct demonstrates basic usage patterns and should show completely",
                    "style": "Plain"
                  },
                  {
                    "text": " ",
                    "style": "Plain"
                  },
                  {
                    "text": "since it only has one paragraph of documentation.",
                    "style": "Plain"
                  }
                ]
              },
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "It uses ",
                    "style": "Plain"
                  },
                  {
                    "text": "Vector",
                    "style": "InlineCode",
                    "url": "https://doc.rust-lang.org/nightly/alloc/vec/index.html?search=alloc%3A%3Avec%3A%3AVec"
                  },
                  {
                    "text": " for testing intra-doc link resolution with renamed imports.",
                    "style": "Plain"
                  },
                  {
                    "text": " ",
                    "style": "Plain"
                  },
                  {
                    "text": "Also tests ",
                    "style": "Plain"
                  },
                  {
                    "text": "HashMap",
                    "style": "InlineCode",
                    "url": "https://doc.rust-lang.org/nightly/std/collections/hash/map/index.html?search=std%3A%3Acollections%3A%3Ahash%3A%3Amap%3A%3AHashMap"
                  },
                  {
                    "text": " which is a non-renamed import.",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "path": "CrateAlias",
        "kind": "struct",
        "url": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/struct.CrateAlias.html",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A struct in a submodule",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      }
    ]
  }
}
