ferritin/src/snapshots/ferritin__tests__get_prefix_tests_doc_deep_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::prefix_tests::deep::DocDeep\"),\nOutputMode :: Agent, & get_fixture_crate_path ())"
---
Struct fixture_crate::prefix_tests::deep::DocDeep — in fixture-crate (0.1.0)

Intra-doc links from a nested module:

- self::DeepMarker — local sibling.
- super::PrefixMarker — one module up.
- super::super::TestStruct — two modules up (crate root).
- crate::TestStruct — absolute path from crate root.

struct DocDeep;

## Trait Implementations

std: Freeze, From<Self>, RefUnwindSafe, Send, Sync, Unpin, UnsafeUnpin, UnwindSafe

- impl Any where Self: 'static + ?Sized
- impl Borrow<Self> where Self: ?Sized
- impl BorrowMut<Self> where Self: ?Sized
- impl<U: From<Self>> Into<U>
- impl<U: Into<Self>> TryFrom<U> — type Error = never
- impl<U: TryFrom<Self>> TryInto<U> — type Error = <U as TryFrom<Self>>::Error
