ferritin/src/snapshots/ferritin__tests__get_prefix_tests_doc_deep_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::prefix_tests::deep::DocDeep\"),\nOutputMode :: Ai, & get_fixture_crate_path ())"
---
Item: DocDeep
Kind: Struct
Visibility: Public
Defined at: fixture_crate::prefix_tests::deep::DocDeep
In crate: fixture-crate (0.1.0)

Intra-doc links from a nested module:

self::DeepMarker — local sibling.

super::PrefixMarker — one module up.

super::super::TestStruct — two modules up (crate root).

crate::TestStruct — absolute path from crate root.

struct DocDeep;

Trait Implementations
UnsafeUnpin, Freeze, Sync, Send, From<T>, RefUnwindSafe, UnwindSafe, Unpin
impl<T: 'static + ?Sized> Any

impl<T, U: Into<T>> TryFrom<U> //     type Error = Infallible


impl<T, U: TryFrom<T>> TryInto<U> //     type Error = <U as TryFrom<T>>::Error


impl<T, U: From<T>> Into<U>

impl<T: ?Sized> BorrowMut<T>

impl<T: ?Sized> Borrow<T>
